[package]
name = "sourceforge-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["cookies", "stream"] }
rss = "2.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
http = "1.0.0"
teloxide = { version = "0.12", features = ["macros"] }
